aws/accounts/personal/us_east_1/applications/k3s/argocd/manifests/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  ingressClassName: traefik
  rules:
    - host: k3s.vinny.dev.br
      http:
        paths:
          - path: /whoami
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - k3s.vinny.dev.br
      secretName: k3s-tls
