aws/accounts/personal/us_east_1/applications/k3s/argocd/manifests/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    external-dns.alpha.kubernetes.io/target: k8s-traefik-traefik-b1092d969c-29bb905179fb476a.elb.us-east-1.amazonaws.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k3s.vinny.dev.br`) && PathPrefix(`/whoami`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: k3s-tls
